--- a/style.css
+++ b/style.css
@@ -20,6 +20,20 @@ h1 {
   color: whitesmoke;
 }
 
+#stepOne{
+  display: flex;
+}
+#stepTwo{
+  display: flex;
+}
+#stepThree{
+  display: flex;
+}
+#stepFour{
+  display: flex;
+}
+
+
 .box {
   width: 160px;
   height: 160px;
